--- a/man/man1/imthreshold-shris.1
+++ b/man/man1/imthreshold-shris.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20220702 "02 Jul 2022" "User Manual"
+.TH "ImThreshold" 1 0.20221221 "21 Dec 2022" "User Manual"
 
 .SH NAME
 imthreshold-shris
@@ -21,6 +21,12 @@ name filter:
 .TP
 -m
 mode (int, optional, default = 2, {2,{3(hris),all(gsample)}})
+.TP
+-q str
+colorspace:
+    'rgb' (default)
+    'ryb4'
+    'ycbcr'
 .TP
 -r
 reduce scale (bool, optional)
