--- a/man/man1/imthreshold-tlocal.1
+++ b/man/man1/imthreshold-tlocal.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20220702 "02 Jul 2022" "User Manual"
+.TH "ImThreshold" 1 0.20221221 "21 Dec 2022" "User Manual"
 
 .SH NAME
 imthreshold-tlocal
@@ -10,6 +10,15 @@ Local adaptive thresholding image.
 imthreshold-tlocal [options] <input_image> <output_image>(BW)
 
 .SH OPTIONS
+.TP
+-b
+color correct (bool, optional, default = false)
+.TP
+-c N
+contrast limit (int, optional, default = 128)
+.TP
+-d N.N
+delta (float, optional, default = -5.0)
 .TP
 -f str
 name filter:
@@ -26,15 +35,6 @@ name filter:
     'sauvola' (default)
     'size'
 .TP
--b
-color correct (bool, optional, default = false)
-.TP
--c N
-contrast limit (int, optional, default = 128)
-.TP
--d N.N
-delta (float, optional, default = -5.0)
-.TP
 -i
 invert (bool, optional, default = false)
 .TP
@@ -44,11 +44,17 @@ dynamic range (int, optional, default = 128)
 -l N
 lower bound (int, optional, default = 0)
 .TP
+-n
+norm (bool, optional, default = false)
+.TP
 -o N.N
 overlay (float, optional, default = 0.5)
 .TP
--n
-norm (bool, optional, default = false)
+-q str
+colorspace:
+    'rgb' (default)
+    'ryb4'
+    'ycbcr'
 .TP
 -r N
 radius (int, optional, default = 7)
