--- a/man/man1/imthreshold-ttext.1
+++ b/man/man1/imthreshold-ttext.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20220702 "02 Jul 2022" "User Manual"
+.TH "ImThreshold" 1 0.20221221 "21 Dec 2022" "User Manual"
 
 .SH NAME
 imthreshold-ttext
@@ -13,6 +13,12 @@ imthreshold-ttext [options] <input_file> <output_file>(BW) [textg_file]
 .TP
 -c N
 contour amplitude (int, optional, default = 5)
+.TP
+-q str
+colorspace:
+    'rgb' (default)
+    'ryb4'
+    'ycbcr'
 .TP
 -r N
 radius (int, optional, default = 5)
