--- a/man/man1/imthreshold-size.1
+++ b/man/man1/imthreshold-size.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20220702 "02 Jul 2022" "User Manual"
+.TH "ImThreshold" 1 0.20221221 "21 Dec 2022" "User Manual"
 
 .SH NAME
 imthreshold-size
@@ -13,16 +13,22 @@ imthreshold-size [options] <input_image> <output_image>
 .TP
 -f str
 name filter:
-                    'bicubic'
-                    'bicont'
-                    'biline'
                     'biakima'
+                    'bicont'
+                    'bicubic'
+                    'biline'
                     'gsample' (default)
                     'nearest'
 .TP
 -p N.N
 part prefilter RIS (float, optional, default = 1.0)
 (<0 - back-direct-diff/4-direct-patch, >0 - direct-back-diff-path-direct)
+.TP
+-q str
+colorspace:
+    'rgb' (default)
+    'ryb4'
+    'ycbcr'
 .TP
 -r N.N
 ratio, scale factor (float, optional, default = 1.0)
