--- a/man/man1/imthreshold-tdjvul.1
+++ b/man/man1/imthreshold-tdjvul.1
@@ -43,6 +43,7 @@ colorspace:
     'rgb' (default)
     'ryb4'
     'ycbcr'
+    'hsv'
 .TP
 -w N
 w/b mode (int, optional, default = 0 [auto], >0-white, <0-black)
