--- a/man/man1/imthreshold-size.1
+++ b/man/man1/imthreshold-size.1
@@ -29,6 +29,7 @@ colorspace:
     'rgb' (default)
     'ryb4'
     'ycbcr'
+    'hsv'
 .TP
 -r N.N
 ratio, scale factor (float, optional, default = 1.0)
