--- a/man/man1/imthreshold-filter.1
+++ b/man/man1/imthreshold-filter.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20221221 "21 Dec 2022" "User Manual"
+.TH "ImThreshold" 1 0.20230221 "21 Feb 2023" "User Manual"
 
 .SH NAME
 imthreshold-filter
@@ -23,6 +23,7 @@ max delta (int, optional, default = 50)
 -f str
 name filter:
     'adsmooth'
+    'autowhite'
     'bimod'
     'blur'
     'bwc'
