--- a/man/man1/imthreshold-filter.1
+++ b/man/man1/imthreshold-filter.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20230226 "26 Feb 2023" "User Manual"
+.TH "ImThreshold" 1 0.20230320 "20 Mar 2023" "User Manual"
 
 .SH NAME
 imthreshold-filter
@@ -23,6 +23,7 @@ max delta (int, optional, default = 50)
 -f str
 name filter:
     'adsmooth'
+    'autolevel'
     'autowhite'
     'bimod'
     'blur'
@@ -39,14 +40,8 @@ name filter:
     'levelsize'
     'mirror'
     'monocolor'
-    'mbclose'
-    'mbdilate'
-    'mberose'
-    'mbopen'
-    'mclose'
     'mdilate'
     'merose'
-    'mopen'
     'none' (default)
     'peron'
     'posterize'
