--- a/man/man1/imthreshold-math.1
+++ b/man/man1/imthreshold-math.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20230320 "20 Mar 2023" "User Manual"
+.TH "ImThreshold" 1 0.20230330 "30 Mar 2023" "User Manual"
 
 .SH NAME
  imthreshold-math
@@ -29,6 +29,7 @@ name method
     'mirror'
     'multiply'
     'norm'
+    'overlay'
     'plus'
     'sbmetric'
     'diff'
