--- a/man/man1/imthreshold-tlocal.1
+++ b/man/man1/imthreshold-tlocal.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20230330 "30 Mar 2023" "User Manual"
+.TH "ImThreshold" 1 0.20230408 "08 Apr 2023" "User Manual"
 
 .SH NAME
 imthreshold-tlocal
@@ -28,9 +28,10 @@ name filter:
     'blur'
     'chistian'
     'dalg'
+    'edge'
+    'edgeplus'
     'gravure'
     'mscale'
-    'edge'
     'niblack'
     'sauvola' (default)
     'size'
