--- a/man/man1/imthreshold-fdespeckle.1
+++ b/man/man1/imthreshold-fdespeckle.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20230408 "08 Apr 2023" "User Manual"
+.TH "ImThreshold" 1 0.20230428 "28 Apr 2023" "User Manual"
 
 .SH NAME
 imthreshold-fdespeckle
@@ -26,6 +26,7 @@ learnen number (int, optional, default = 1)
 .TP
 -m str
 name method:
+    'hatch'
     'hist'
     'invert'
     'mag2'
