--- a/man/man1/imthreshold-math.1
+++ b/man/man1/imthreshold-math.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20230704 "04 Jul 2023" "User Manual"
+.TH "ImThreshold" 1 0.20230707 "07 Jul 2023" "User Manual"
 
 .SH NAME
  imthreshold-math
@@ -19,6 +19,7 @@ name method
 (string, optional, default = similar):
     'average'
     'blur'
+    'diff'
     'distance'
     'divide'
     'geometric'
@@ -30,10 +31,10 @@ name method
     'multiply'
     'norm'
     'overlay'
-    'plus'
-    'sbmetric'
-    'diff'
     'patch'
+    'plus'
+    'screen'
+    'sbmetric'
     'threshold (default)'
 .TP
 -r N
