--- a/man/man1/imthreshold-separate.1
+++ b/man/man1/imthreshold-separate.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20230704 "04 Jul 2023" "User Manual"
+.TH "ImThreshold" 1 0.20230707 "07 Jul 2023" "User Manual"
 
 .SH NAME
 imthreshold-separate
@@ -31,6 +31,7 @@ name method:
                     'delta'
                     'inpaint'
                     'mscale'
+                    'mscalec'
                     'simple' (default)
 .TP
 -o N.N
