--- a/man/man1/imthreshold-tdjvul.1
+++ b/man/man1/imthreshold-tdjvul.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20230704 "04 Jul 2023" "User Manual"
+.TH "ImThreshold" 1 0.20230707 "07 Jul 2023" "User Manual"
 
 .SH NAME
 imthreshold-tdjvul
@@ -31,6 +31,11 @@ invert station (bool, optional, default = false)
 .TP
 -l N
 level (int, optional, default = 0[auto])
+.TP
+-m str
+name metod:
+    'djvuc'
+    'djvul (default)'
 .TP
 -o N.N
 overlay (float, optional, default = 0.5)
