--- a/man/man1/imthreshold-tglobal.1
+++ b/man/man1/imthreshold-tglobal.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20230707 "07 Jul 2023" "User Manual"
+.TH "ImThreshold" 1 0.20230714 "14 Jul 2023" "User Manual"
 
 .SH NAME
 imthreshold-tglobal
@@ -10,6 +10,9 @@ Global thresholding image.
 imthreshold-tglobal [options] <input_image> <output_image>(BW)
 
 .SH OPTIONS
+.TP
+-2
+color sqr (bool, optional, default = false)
 .TP
 -b
 color correct (bool, optional, default = false)
