--- a/man/man1/imthreshold-tlayer.1
+++ b/man/man1/imthreshold-tlayer.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20230707 "07 Jul 2023" "User Manual"
+.TH "ImThreshold" 1 0.20230714 "14 Jul 2023" "User Manual"
 
 .SH NAME
 imthreshold-tlayer
@@ -10,6 +10,12 @@ Local adaptive zero-layer image.
 imthreshold-tlayer [options] <input_image> <output_image>
 
 .SH OPTIONS
+.TP
+-2
+color sqr (bool, optional, default = false)
+.TP
+-b
+color correct (bool, optional, default = false)
 .TP
 -c N
 contrast limit (int, optional, default = 128)
