--- a/man/man1/imthreshold-filter.1
+++ b/man/man1/imthreshold-filter.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20230714 "14 Jul 2023" "User Manual"
+.TH "ImThreshold" 1 0.20230809 "09 Aug 2023" "User Manual"
 
 .SH NAME
 imthreshold-filter
@@ -30,6 +30,8 @@ name filter:
     'bwc'
     'cluster'
     'denoise'
+    'despeckle'
+    'eqialize'
     'greynorm'
     'greyworld'
     'illumc'
