--- a/man/man1/imthreshold-size.1
+++ b/man/man1/imthreshold-size.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20230714 "14 Jul 2023" "User Manual"
+.TH "ImThreshold" 1 0.20230809 "09 Aug 2023" "User Manual"
 
 .SH NAME
 imthreshold-size
@@ -17,6 +17,7 @@ name filter:
                     'bicont'
                     'bicubic'
                     'biline'
+                    'crop'
                     'gsample' (default)
                     'nearest'
 .TP
