--- a/man/man1/imthreshold-shris.1
+++ b/man/man1/imthreshold-shris.1
@@ -16,6 +16,7 @@ imthreshold-shris [options] <input_file> <output_file>
 name filter:
     'hris' (default)
     'gsample'
+    'scalenx'
     'iris'
     'frp' (long!)
 .TP
